Add generic everywhere / Obey the linters